@@ -1,3 +1,7 @@
+2004-04-07  Daniel Macks  <dmacks@netspace.org>
+
+	* fink.in: Documented 'fink dumpinfo'
+
 2004-04-04  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* VERSION: Bumped package manager version to 0.20.0
